<resources>
    <string name="app_name">UMDine</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="menu_drawer_home">Home</string>
    <string name="menu_drawer_cafes">Cafes</string>
    <string name="menu_drawer_search">Search</string>
    <string name="menu_drawer_fav">Favorites</string>
    <string name="menu_drawer_faq">FAQ</string>
    <string name="menu_drawer_user">User</string>
    <string name="menu_drawer_email">sample.name001@umb.edu</string>
    <string name="search_hint">Enter text</string>
    <string name="settings_title">Settings</string>
    <string name="settings_text">About</string>
    <string name="settings_description">Never go hungry with UMDine - the premier
        UMass Boston application that allows you to browse all the eateries
        on campus and choose according to your palate, any time. With UMDine
        you can browse up-to-date cafe menus, prices, and locations, save favorite
        items and search all menus to satiate your need. Whether you\'re on your
        way to class or seek to grab a snack after a long study session at the
        library, be sure to check the app for the latest dining options on campus.</string>
    <string name="settings_copyright_text">™ and © 2015 BGGR Inc. All Rights Reserved.</string>
    <string name="home_text">Welcome to \n Umass Boston Dining!</string>
    <string name="home_subtext">Please select an option \n below to get started.</string>
    <string name="home_button1">What\'s Open Now</string>
    <string name="home_button2">Favorites</string>
    <string name="home_button3">Cafes</string>
    <string name="whats_open_now_title">What\'s Open Now</string>
    <string name="faq_title">FAQ</string>
    <string name="faq_question_1">Do you offer a meal plan?</string>
    <string name="faq_question_1_answer">Currently we do not offer traditional meal plans.
        All new students receive a UDine card automatically. This is a reloadable
        cash card (works like a debit card) that can be loaded at any cash register
        or by visiting the website – www.sogocashcard.com. Using your UDine card means
        that you don’t have to carry cash to purchase meals at any of our dining locations.
        It also earns you rewards with each purchase. You can learn more about our rewards
        program by visiting the UDine Card page on our website.</string>
    <string name="faq_question_2">What if I lose my UDine Card?</string>
    <string name="faq_question_2_answer">Your funds are secure. Contact the SoGo Cash Card
        help line 1 (888) 345-7647 or visit their website www.sogocashcard.com to report
        the card as stolen. A new card will be issued and your funds transferred to the new
        card.</string>
    <string name="faq_question_3">Can I purchase my UDine card with my excess Financial Aid
        Funds?</string>
    <string name="faq_question_3_answer">Yes. Please visit the Bursar\’s Office for assistance
        with this. They can issue you a card and assist with the process of loading your
        financial aid funds to your account.</string>
    <string name="faq_question_4">How do I reload my card?</string>
    <string name="faq_question_4_answer">You can reload your card with any cashier in our locations.
        Or you can create an online account at www.sogocashcard.com that allows you to check
        your balance, reload your card, and set up auto-reload if desired.</string>
    <string name="faq_question_5">I have food allergies or dietary restrictions; do you have
        resources available to help me?</string>
    <string name="faq_question_5_answer">Please let us know! Our Campus Dining Services Program
        can accommodate your special dietary requirements. For more information, please
        contact Michael Reilly, General Manager at (617) 287-5033. We also have a Registered
        Dietitian on our team who can help you evaluate and make decisions based on your dining
        needs.</string>
    <string name="favorites_title">Favorites</string>
    <string name="favorites_text1">A place for your favorites bites on campus.</string>
    <string name="favorites_text2">food court item 6</string>
    <string name="cafe_list_title">Campus Cafes</string>
    <string name="cafe_list_button1">Food Court</string>
    <string name="cafe_list_button2">The Atrium Cafe</string>
    <string name="cafe_list_button3">The University Club</string>
    <string name="cafe_list_button4">Healey Library Cafe</string>
    <string name="cafe_list_button5">McCormack Express</string>
    <string name="cafe_list_button6">Quinn Cafe</string>
    <string name="cafe_info_summary_title">Summary: </string>
    <string name="cafe_info_hours_title">Hours: </string>
    <string name="cafe_info_location_title">Location: </string>
    <string name="cafe_info_menu_items_title">Menu Items: </string>
    <string name="cafe_info_url_title">Webpage: </string>
    <string name="cafe_list_category_soups"><b>Soups</b></string>
    <string name="cafe_list_category_entrees"><b>Entrées</b></string>
    <string name="cafe_list_category_beverages"><b>Beverages</b></string>
    <string name="cafe_list_category_snacks"><b>Snacks</b></string>
    <string name="food_court_summary_text">The Food Court has something for everyone.
        From a rotating menu at The Harbor Market and Sizzlin\' Station,
        to light and healthy fare including a fresh wrap, upscale sandwich,
        salad bar or soup. For those days you just can\'t decide, you can get a
        burger at Burger King or pizza from Pandini\'s.</string>
    <string name="food_court_hours">
        \tMonday - Thursday:   \t7:00AM - 7:00PM\n
        \tFriday:              \t7:00AM - 3:00PM\n
        \tSaturday - Sunday:   \tClosed</string>
    <string name="food_court_location">
        1st Floor of the Campus Center\n
        Columbia Point, Boston, MA 02125
    </string>
    <string name="food_court_url">https://umb.sodexomyway.com/dining-choices/atrium.html</string>
    <string name="food_court_item_1">Clam Chowder</string>
    <string name="food_court_item_1_price">4.50</string>
    <string name="food_court_item_2">Roasted Beet and Fennel</string>
    <string name="food_court_item_2_price">5.00</string>
    <string name="food_court_item_3">Garlic Tomatoes</string>
    <string name="food_court_item_3_price">3.00</string>
    <string name="food_court_item_4">Garlic Chicken Tortillas</string>
    <string name="food_court_item_4_price">5.25</string>
    <string name="food_court_item_5">BLT Hash Brown</string>
    <string name="food_court_item_5_price">4.75</string>
    <string name="food_court_item_6">Bacon</string>
    <string name="food_court_item_6_price">2.25</string>
    <string name="food_court_item_7">Baby Spinach</string>
    <string name="food_court_item_7_price">2.50</string>
    <string name="food_court_item_8">Diced Tomatoes</string>
    <string name="food_court_item_8_price">2.25</string>
    <string name="food_court_item_9">Cheddar Cheese</string>
    <string name="food_court_item_9_price">2.00</string>
    <string name="food_court_item_10">Country Fried Steak </string>
    <string name="food_court_item_10_price">8.00</string>
    <string name="food_court_item_11">Country Fried Portabello</string>
    <string name="food_court_item_11_price">6.50</string>
    <string name="food_court_item_12">Herbs Roasted Potatoes</string>
    <string name="food_court_item_12_price">5.00</string>
    <string name="food_court_item_13">Roasted Corn</string>
    <string name="food_court_item_13_price">3.75</string>
    <string name="food_court_item_14">Steam Broccoli</string>
    <string name="food_court_item_14_price">2.50</string>
    <string name="food_court_item_15">Dinner Rols</string>
    <string name="food_court_item_15_price">8.00</string>
    <string name="food_court_item_16">Omelet Station</string>
    <string name="food_court_item_16_price">4.00</string>
    <string name="food_court_item_17">Home Fries</string>
    <string name="food_court_item_17_price">4.25</string>
    <string name="food_court_item_18">Turkey Sausage</string>
    <string name="food_court_item_18_price">3.00</string>
    <string name="food_court_item_19">Pork Sausage</string>
    <string name="food_court_item_19_price">5.00</string>
    <string name="food_court_item_20">Hawaiian BBQ Chicken Pizza</string>
    <string name="food_court_item_20_price">2.75/ Slice </string>
    <string name="food_court_item_21">Pepperoni Pizza</string>
    <string name="food_court_item_21_price">2.75/ Slice </string>
    <string name="food_court_item_22">Cheese Pizza</string>
    <string name="food_court_item_22_price">2.75/ Slice </string>
    <string name="food_court_item_23">Vegetable Lover\'s Pizza</string>
    <string name="food_court_item_23_price">2.75/ Slice </string>
    <string name="food_court_item_24">Meatballs</string>
    <string name="food_court_item_24_price">6.75 </string>
    <string name="food_court_item_25">Chicken Parmesan</string>
    <string name="food_court_item_25_price">6.75 </string>
    <string name="food_court_item_26">Penne Meatballs</string>
    <string name="food_court_item_26_price">7.75 </string>
    <string name="food_court_item_27">Penne Chicken Parms</string>
    <string name="food_court_item_27_price">7.75 </string>
    <string name="food_court_item_28">Black And Blue Wrap</string>
    <string name="food_court_item_28_price">5.00</string>
    <string name="atrium_cafe_summary_text">At the Atrium Cafe, the aroma of freshly brewed Peet\’s gourmet
        coffee will wake up your senses, so stop by the café and fix yourself a
        cup of coffee and treat yourself to a fresh made sweet pastry or a savory
        baked muffin or bagel.</string>
    <string name="atrium_cafe_hours">
        \tMonday - Friday: \t8:00AM - 6:00PM\n
        \tSaturday:        \t8:00AM - 2:00PM\n
        \tSunday:          \tClosed</string>
    <string name="atrium_cafe_location">
        Upper Level of the Campus Center\n
        Columbia Point, Boston, MA 02125
    </string>
    <string name="atrium_cafe_url">
        https://umb.sodexomyway.com/dining-choices/atrium.html
    </string>
    <string name="atrium_cafe_item_1"> Azteca Chicken and Vegetables</string>
    <string name="atrium_cafe_item_1_price">5.00</string>
    <string name="atrium_cafe_item_2">American Bounty</string>
    <string name="atrium_cafe_item_2_price">15.00</string>
    <string name="atrium_cafe_item_3">Cream of Broccoli Dummy</string>
    <string name="atrium_cafe_item_3_price">3.00</string>
    <string name="atrium_cafe_item_4">Mac and Cheese</string>
    <string name="atrium_cafe_item_4_price">5.00</string>
    <string name="atrium_cafe_item_5">Sugar Snap Peas </string>
    <string name="university_club_item_1_price">Please visit our location for pricing.</string>
    <string name="university_club_item_1">Autumn Vegetable</string>
    <string name="university_club_item_2">Chicken Orzo</string>
    <string name="university_club_item_3">Chicken with Rice and Corn</string>
    <string name="university_club_item_4">Tofu with Rice and Corn</string>
    <string name="university_club_item_5">Beef in Sea Salt with Manioc</string>
    <string name="university_club_item_6">Brazillian Cous Cous</string>
    <string name="university_club_item_7">Roasted Season Vegetables</string>
    <string name="quinn_cafe_hours">
        \tMonday - Friday:     \t7:00 AM - 3:00PM\n
        \tSaturday - Sunday:   \tClosed</string>
    <string name="quinn_cafe_location">
        Top Floor of the Quinn Building\n
        Columbia Point, Boston, MA 02125
    </string>
    <string name="quinn_cafe_url">
        https://umb.sodexomyway.com/dining-choices/quinn-cafe.html
    </string>
</resources>