<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black"
            android:title="@string/menu_drawer_home" />
        <item
            android:id="@+id/nav_restaurant_menu"
            android:icon="@drawable/ic_restaurant_menu_black"
            android:title="@string/menu_drawer_cafes" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search_black"
            android:title="@string/menu_drawer_search" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_favorite_black"
            android:title="@string/menu_drawer_fav" />
        <item
            android:id="@+id/nav_faq"
            android:icon="@drawable/ic_question_answer_black"
            android:title="@string/menu_drawer_faq" />

    </group>

</menu>