<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/quinn_cafe_details_tab_2">

    <TextView
        android:text="@string/cafe_info_hours_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin_text"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textStyle="bold"/>

    <TextView
        android:text="@string/quinn_cafe_hours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/activity_horizontal_margin_text"
        android:layout_marginLeft="@dimen/activity_horizontal_margin_text"/>

    <TextView
        android:text="@string/cafe_info_location_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin_text"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textStyle="bold"/>

    <TextView
        android:text="@string/quinn_cafe_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/activity_horizontal_margin_text"
        android:layout_marginLeft="@dimen/activity_horizontal_margin_text"/>

    <TextView
        android:text="@string/cafe_info_url_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin_text"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textStyle="bold"/>

    <TextView
        android:text="@string/quinn_cafe_url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/activity_horizontal_margin_text"
        android:layout_marginLeft="@dimen/activity_horizontal_margin_text"
        android:layout_marginBottom="@dimen/activity_horizontal_margin_text"/>

</LinearLayout>

</ScrollView>