<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:id="@+id/faq_content"
    tools:showIn="@layout/faq_main"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">


    <!--Header-->

    <TextView
        android:id="@+id/faq_header"
        android:background="@color/transparentColorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="36sp"
        android:text="@string/faq_title"
        android:gravity="center"
        android:fontFamily="sans-serif-thin"
        android:textColor="@color/white"
        android:paddingTop="@dimen/activity_margin_text_double"
        android:paddingBottom="@dimen/activity_margin_text_double"/>


    <!--Content-->

    <TextView
        android:id="@+id/faq_title1"
        android:layout_below="@id/faq_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/faq_question_1"
        android:gravity="start"
        android:textColor="@color/black"
        android:layout_margin="@dimen/activity_margin_text" />


    <TextView
        android:id="@+id/faq_text1"
        android:layout_below="@id/faq_title1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="@string/faq_question_1_answer"
        android:gravity="start"
        android:textColor="@color/grey"
        android:layout_margin="@dimen/activity_margin_text" />

    <TextView
        android:id="@+id/faq_title2"
        android:layout_below="@id/faq_text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/faq_question_2"
        android:gravity="start"
        android:textColor="@color/black"
        android:layout_margin="@dimen/activity_margin_text" />


    <TextView
        android:id="@+id/faq_text2"
        android:layout_below="@id/faq_title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="@string/faq_question_2_answer"
        android:gravity="start"
        android:textColor="@color/grey"
        android:layout_margin="@dimen/activity_margin_text" />

    <TextView
        android:id="@+id/faq_title3"
        android:layout_below="@id/faq_text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/faq_question_3"
        android:gravity="start"
        android:textColor="@color/black"
        android:layout_margin="@dimen/activity_margin_text" />


    <TextView
        android:id="@+id/faq_text3"
        android:layout_below="@id/faq_title3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="@string/faq_question_3_answer"
        android:gravity="start"
        android:textColor="@color/grey"
        android:layout_margin="@dimen/activity_margin_text" />

    <TextView
        android:id="@+id/faq_title4"
        android:layout_below="@id/faq_text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/faq_question_4"
        android:gravity="start"
        android:textColor="@color/black"
        android:layout_margin="@dimen/activity_margin_text" />


    <TextView
        android:id="@+id/faq_text4"
        android:layout_below="@id/faq_title4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="@string/faq_question_4_answer"
        android:gravity="start"
        android:textColor="@color/grey"
        android:layout_margin="@dimen/activity_margin_text" />


    <TextView
        android:id="@+id/faq_title5"
        android:layout_below="@id/faq_text4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/faq_question_5"
        android:gravity="start"
        android:textColor="@color/black"
        android:layout_margin="@dimen/activity_margin_text" />


    <TextView
        android:id="@+id/faq_text5"
        android:layout_below="@id/faq_title5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="@string/faq_question_5_answer"
        android:gravity="start"
        android:textColor="@color/grey"
        android:layout_margin="@dimen/activity_margin_text" />



</RelativeLayout>

</ScrollView>

