<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/university_club_details_tab_1">

        <TextView
            android:text="@string/cafe_list_category_soups"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_margin_text"
            android:textSize="18sp"
            android:textColor="@color/black" />

        <!-- Soups -->

        <TextView
            android:text="@string/university_club_item_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/activity_margin_text"
            android:layout_marginLeft="@dimen/activity_margin_text"
            android:layout_marginTop="@dimen/activity_margin_text"
            android:textSize="14sp"
            android:textColor="@color/black" />



        <TextView
            android:text="@string/university_club_item_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/activity_margin_text"
            android:layout_marginLeft="@dimen/activity_margin_text"
            android:layout_marginTop="@dimen/activity_margin_text_double"
            android:layout_marginBottom="@dimen/activity_margin_text_double"
            android:textSize="14sp"
            android:textColor="@color/black" />


        <TextView
            android:text="@string/cafe_list_category_entrees"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/activity_margin_text"
            android:layout_marginLeft="@dimen/activity_margin_text"
            android:layout_marginTop="@dimen/activity_margin_text_double"
            android:textSize="18sp"
            android:textColor="@color/black" />

        <!-- Entrees -->

        <TextView
            android:text="@string/university_club_item_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/activity_margin_text"
            android:layout_marginLeft="@dimen/activity_margin_text"
            android:layout_marginTop="@dimen/activity_margin_text_double"
            android:textSize="14sp"
            android:textColor="@color/black" />

        <TextView
            android:text="@string/university_club_item_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/activity_margin_text"
            android:layout_marginLeft="@dimen/activity_margin_text"
            android:layout_marginTop="@dimen/activity_margin_text_double"
            android:textSize="14sp"
            android:textColor="@color/black" />

        <TextView
            android:text="@string/university_club_item_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/activity_margin_text"
            android:layout_marginLeft="@dimen/activity_margin_text"
            android:layout_marginTop="@dimen/activity_margin_text_double"
            android:textSize="14sp"
            android:textColor="@color/black" />

        <TextView
            android:text="@string/university_club_item_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/activity_margin_text"
            android:layout_marginLeft="@dimen/activity_margin_text"
            android:layout_marginTop="@dimen/activity_margin_text_double"
            android:textSize="14sp"
            android:textColor="@color/black" />



        <!-- Last item -->

        <TextView
            android:text="@string/university_club_item_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/activity_margin_text"
            android:layout_marginLeft="@dimen/activity_margin_text"
            android:layout_marginTop="@dimen/activity_margin_text_double"
            android:layout_marginBottom="@dimen/activity_margin_text_double"
            android:textSize="14sp"
            android:textColor="@color/black" />


        <TextView
            android:text="@string/university_club_item_1_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/activity_margin_text"
            android:layout_marginLeft="@dimen/activity_margin_text"
            android:layout_marginTop="@dimen/activity_margin_text_double"
            android:layout_marginBottom="@dimen/activity_margin_text_double"
            android:textSize="12sp"
            android:textColor="@color/grey"/>


    </LinearLayout>

</ScrollView>