<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">
    <!--app:layout_behavior="@string/appbar_scrolling_view_behavior">-->
    <!--tools:showIn="@layout/activity_main"-->
    <!--tools:context=".MainActivity">-->


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/Death_to_stock_communicate_hands_small_blur"
            android:scaleType="centerCrop"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="36dp"
            android:text="@string/cafe_list_title"
            android:gravity="center"
            android:fontFamily="sans-serif-thin"
            android:textColor="@color/black"
            android:paddingTop="@dimen/title_margin_text" />


    </RelativeLayout>

    <LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center|bottom">

        <Button
            android:id="@+id/home_button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cafe_list_button1"
            android:textColor="@color/white"
            android:background="@color/transparentColorPrimary"
            android:layout_margin="@dimen/button_margin"/>

        <Button
            android:id="@+id/home_button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cafe_list_button2"
            android:textColor="@color/white"
            android:background="@color/transparentColorPrimary"
            android:layout_margin="@dimen/button_margin"/>

        <Button
            android:id="@+id/home_button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cafe_list_button3"
            android:textColor="@color/white"
            android:background="@color/transparentColorPrimary"
            android:layout_margin="@dimen/button_margin"/>

        <Button
            android:id="@+id/home_button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cafe_list_button4"
            android:textColor="@color/white"
            android:background="@color/transparentColorPrimary"
            android:layout_margin="@dimen/button_margin"/>

        <Button
            android:id="@+id/home_button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cafe_list_button5"
            android:textColor="@color/white"
            android:background="@color/transparentColorPrimary"
            android:layout_margin="@dimen/button_margin"/>

        <Button
            android:id="@+id/home_button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cafe_list_button6"
            android:textColor="@color/white"
            android:background="@color/transparentColorPrimary"
            android:layout_margin="@dimen/button_margin"/>

        <Button
            android:id="@+id/home_button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cafe_list_button7"
            android:textColor="@color/white"
            android:background="@color/transparentColorPrimary"
            android:layout_margin="@dimen/button_margin"/>

    </LinearLayout>

</RelativeLayout>