<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main"
    tools:context=".MainActivity">

    <ImageView
        android:src="@drawable/death_to_stock_dinner_small_blur"
        android:id="@+id/death_to_stock_dinner"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scaleType="fitXY"/>

        <TextView
            android:id="@+id/home_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_text"
            android:textColor="@color/black"
            android:textSize="42dp"
            android:gravity="center"
            android:fontFamily="sans-serif-thin"
            android:paddingTop="@dimen/title_margin_text"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_subtext"
            android:textColor="@color/transparentBlack"
            android:textSize="16dp"
            android:gravity="center"
            android:layout_below="@id/home_text"
            android:fontFamily="sans-serif"
            android:paddingTop="@dimen/activity_vertical_margin_text"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center|bottom">

               <Button
                    android:id="@+id/home_button1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/home_button1"
                    android:textColor="@color/white"
                    android:background="@color/transparentColorPrimary"
                    android:layout_margin="@dimen/button_margin"/>

                <Button
                    android:id="@+id/home_button2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/home_button2"
                    android:textColor="@color/white"
                    android:background="@color/transparentColorPrimary"
                    android:layout_margin="@dimen/button_margin"/>

                <Button
                    android:id="@+id/home_button3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/home_button3"
                    android:textColor="@color/white"
                    android:background="@color/transparentColorPrimary"
                    android:layout_margin="@dimen/button_margin"/>

    </LinearLayout>

</RelativeLayout>
